// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaterialCategory -> Components -> <Details> render() Dispatch materialCategoryName is getting on input change 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <MaterialCategoryDetails
        editable={true}
      >
        <Card>
          <Card
            className=""
            tag="div"
          >
            <div
              className="card"
            >
              <CardHeader>
                <CardHeader
                  className="font-size-14"
                  tag="div"
                >
                  <div
                    className="font-size-14 card-header"
                  >
                    Material Category Details
                  </div>
                </CardHeader>
              </CardHeader>
              <CardBody>
                <ContentLoader>
                  <div>
                    <CardBody
                      className=""
                      tag="div"
                    >
                      <div
                        className="card-body"
                      >
                        <Row
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="row"
                          >
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="2"
                            >
                              <div
                                className="col-2"
                              >
                                <Label
                                  className="mb-3"
                                  for="materialCategoryName"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="mb-3"
                                    htmlFor="materialCategoryName"
                                  >
                                    *Name
                                  </label>
                                </Label>
                              </div>
                            </Col>
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="8"
                            >
                              <div
                                className="col-8"
                              >
                                <FormGroup
                                  hidden={false}
                                  tag="div"
                                >
                                  <div
                                    className="form-group"
                                    hidden={false}
                                  >
                                    <Input
                                      bsSize="sm"
                                      className="waves-effect"
                                      data-testid="materialCategoryName"
                                      disabled={false}
                                      invalid={false}
                                      name="materialCategoryName"
                                      onChange={[Function]}
                                      onKeyUp={[Function]}
                                      placeholder="Enter"
                                      style={
                                        Object {
                                          "width": "16rem",
                                        }
                                      }
                                      type="text"
                                      value="dummy"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="waves-effect form-control-sm form-control"
                                        data-testid="materialCategoryName"
                                        disabled={false}
                                        name="materialCategoryName"
                                        onChange={[Function]}
                                        onKeyUp={[Function]}
                                        placeholder="Enter"
                                        style={
                                          Object {
                                            "width": "16rem",
                                          }
                                        }
                                        type="text"
                                        value="dummy"
                                      />
                                    </Input>
                                    <FormFeedback
                                      tag="div"
                                    >
                                      <div
                                        className="invalid-feedback"
                                      >
                                        Enter a valid material category name.
                                      </div>
                                    </FormFeedback>
                                  </div>
                                </FormGroup>
                                <div
                                  hidden={true}
                                >
                                  dummy
                                </div>
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <Row
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="row"
                          >
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="2"
                            >
                              <div
                                className="col-2"
                              >
                                <Label
                                  className="mb-3"
                                  for="materialCategoryParentCategory"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="mb-3"
                                    htmlFor="materialCategoryParentCategory"
                                  >
                                    *Parent Category
                                  </label>
                                </Label>
                              </div>
                            </Col>
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="8"
                            >
                              <div
                                className="col-8"
                              >
                                <FormGroup
                                  hidden={false}
                                  tag="div"
                                >
                                  <div
                                    className="form-group"
                                    hidden={false}
                                  >
                                    <Input
                                      bsSize="sm"
                                      className="waves-effect"
                                      data-testid="materialCategoryParentCategory"
                                      disabled={false}
                                      invalid={false}
                                      name="materialCategoryParentCategory"
                                      onChange={[Function]}
                                      onKeyUp={[Function]}
                                      style={
                                        Object {
                                          "width": "8rem",
                                        }
                                      }
                                      type="select"
                                      value=""
                                    >
                                      <select
                                        aria-invalid={false}
                                        className="waves-effect form-control-sm form-control"
                                        data-testid="materialCategoryParentCategory"
                                        disabled={false}
                                        name="materialCategoryParentCategory"
                                        onChange={[Function]}
                                        onKeyUp={[Function]}
                                        style={
                                          Object {
                                            "width": "8rem",
                                          }
                                        }
                                        value=""
                                      >
                                        <option
                                          value=""
                                        >
                                          Select
                                        </option>
                                        <option
                                          key="0"
                                          value={2}
                                        />
                                      </select>
                                    </Input>
                                    <FormFeedback
                                      tag="div"
                                    >
                                      <div
                                        className="invalid-feedback"
                                      >
                                        Enter a valid material category.
                                      </div>
                                    </FormFeedback>
                                  </div>
                                </FormGroup>
                                <div
                                  hidden={true}
                                >
                                  -
                                </div>
                              </div>
                            </Col>
                          </div>
                        </Row>
                      </div>
                    </CardBody>
                  </div>
                </ContentLoader>
              </CardBody>
            </div>
          </Card>
        </Card>
      </MaterialCategoryDetails>
    </Router>
  </BrowserRouter>
</Provider>
`;

exports[`MaterialCategory -> Components -> <Details> render() Dispatch materialCategoryName is getting on key up 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <MaterialCategoryDetails
        changed={true}
        editable={true}
        onSave={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
      >
        <Card>
          <Card
            className=""
            tag="div"
          >
            <div
              className="card"
            >
              <CardHeader>
                <CardHeader
                  className="font-size-14"
                  tag="div"
                >
                  <div
                    className="font-size-14 card-header"
                  >
                    Material Category Details
                  </div>
                </CardHeader>
              </CardHeader>
              <CardBody>
                <ContentLoader>
                  <div>
                    <CardBody
                      className=""
                      tag="div"
                    >
                      <div
                        className="card-body"
                      >
                        <Row
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="row"
                          >
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="2"
                            >
                              <div
                                className="col-2"
                              >
                                <Label
                                  className="mb-3"
                                  for="materialCategoryName"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="mb-3"
                                    htmlFor="materialCategoryName"
                                  >
                                    *Name
                                  </label>
                                </Label>
                              </div>
                            </Col>
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="8"
                            >
                              <div
                                className="col-8"
                              >
                                <FormGroup
                                  hidden={false}
                                  tag="div"
                                >
                                  <div
                                    className="form-group"
                                    hidden={false}
                                  >
                                    <Input
                                      bsSize="sm"
                                      className="waves-effect"
                                      data-testid="materialCategoryName"
                                      disabled={false}
                                      invalid={false}
                                      name="materialCategoryName"
                                      onChange={[Function]}
                                      onKeyUp={[Function]}
                                      placeholder="Enter"
                                      style={
                                        Object {
                                          "width": "16rem",
                                        }
                                      }
                                      type="text"
                                      value="dummy"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="waves-effect form-control-sm form-control"
                                        data-testid="materialCategoryName"
                                        disabled={false}
                                        name="materialCategoryName"
                                        onChange={[Function]}
                                        onKeyUp={[Function]}
                                        placeholder="Enter"
                                        style={
                                          Object {
                                            "width": "16rem",
                                          }
                                        }
                                        type="text"
                                        value="dummy"
                                      />
                                    </Input>
                                    <FormFeedback
                                      tag="div"
                                    >
                                      <div
                                        className="invalid-feedback"
                                      >
                                        Enter a valid material category name.
                                      </div>
                                    </FormFeedback>
                                  </div>
                                </FormGroup>
                                <div
                                  hidden={true}
                                >
                                  dummy
                                </div>
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <Row
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="row"
                          >
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="2"
                            >
                              <div
                                className="col-2"
                              >
                                <Label
                                  className="mb-3"
                                  for="materialCategoryParentCategory"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="mb-3"
                                    htmlFor="materialCategoryParentCategory"
                                  >
                                    *Parent Category
                                  </label>
                                </Label>
                              </div>
                            </Col>
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="8"
                            >
                              <div
                                className="col-8"
                              >
                                <FormGroup
                                  hidden={false}
                                  tag="div"
                                >
                                  <div
                                    className="form-group"
                                    hidden={false}
                                  >
                                    <Input
                                      bsSize="sm"
                                      className="waves-effect"
                                      data-testid="materialCategoryParentCategory"
                                      disabled={false}
                                      invalid={false}
                                      name="materialCategoryParentCategory"
                                      onChange={[Function]}
                                      onKeyUp={[Function]}
                                      style={
                                        Object {
                                          "width": "8rem",
                                        }
                                      }
                                      type="select"
                                      value=""
                                    >
                                      <select
                                        aria-invalid={false}
                                        className="waves-effect form-control-sm form-control"
                                        data-testid="materialCategoryParentCategory"
                                        disabled={false}
                                        name="materialCategoryParentCategory"
                                        onChange={[Function]}
                                        onKeyUp={[Function]}
                                        style={
                                          Object {
                                            "width": "8rem",
                                          }
                                        }
                                        value=""
                                      >
                                        <option
                                          value=""
                                        >
                                          Select
                                        </option>
                                        <option
                                          key="0"
                                          value={2}
                                        />
                                      </select>
                                    </Input>
                                    <FormFeedback
                                      tag="div"
                                    >
                                      <div
                                        className="invalid-feedback"
                                      >
                                        Enter a valid material category.
                                      </div>
                                    </FormFeedback>
                                  </div>
                                </FormGroup>
                                <div
                                  hidden={true}
                                >
                                  -
                                </div>
                              </div>
                            </Col>
                          </div>
                        </Row>
                      </div>
                    </CardBody>
                  </div>
                </ContentLoader>
              </CardBody>
            </div>
          </Card>
        </Card>
      </MaterialCategoryDetails>
    </Router>
  </BrowserRouter>
</Provider>
`;

exports[`MaterialCategory -> Components -> <Details> render() Dispatch materialCategoryParentCategory is getting on input change 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <MaterialCategoryDetails
        changed={true}
        editable={true}
        onSave={[MockFunction]}
      >
        <Card>
          <Card
            className=""
            tag="div"
          >
            <div
              className="card"
            >
              <CardHeader>
                <CardHeader
                  className="font-size-14"
                  tag="div"
                >
                  <div
                    className="font-size-14 card-header"
                  >
                    Material Category Details
                  </div>
                </CardHeader>
              </CardHeader>
              <CardBody>
                <ContentLoader>
                  <div>
                    <CardBody
                      className=""
                      tag="div"
                    >
                      <div
                        className="card-body"
                      >
                        <Row
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="row"
                          >
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="2"
                            >
                              <div
                                className="col-2"
                              >
                                <Label
                                  className="mb-3"
                                  for="materialCategoryName"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="mb-3"
                                    htmlFor="materialCategoryName"
                                  >
                                    *Name
                                  </label>
                                </Label>
                              </div>
                            </Col>
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="8"
                            >
                              <div
                                className="col-8"
                              >
                                <FormGroup
                                  hidden={false}
                                  tag="div"
                                >
                                  <div
                                    className="form-group"
                                    hidden={false}
                                  >
                                    <Input
                                      bsSize="sm"
                                      className="waves-effect"
                                      data-testid="materialCategoryName"
                                      disabled={false}
                                      invalid={false}
                                      name="materialCategoryName"
                                      onChange={[Function]}
                                      onKeyUp={[Function]}
                                      placeholder="Enter"
                                      style={
                                        Object {
                                          "width": "16rem",
                                        }
                                      }
                                      type="text"
                                      value="dummy"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="waves-effect form-control-sm form-control"
                                        data-testid="materialCategoryName"
                                        disabled={false}
                                        name="materialCategoryName"
                                        onChange={[Function]}
                                        onKeyUp={[Function]}
                                        placeholder="Enter"
                                        style={
                                          Object {
                                            "width": "16rem",
                                          }
                                        }
                                        type="text"
                                        value="dummy"
                                      />
                                    </Input>
                                    <FormFeedback
                                      tag="div"
                                    >
                                      <div
                                        className="invalid-feedback"
                                      >
                                        Enter a valid material category name.
                                      </div>
                                    </FormFeedback>
                                  </div>
                                </FormGroup>
                                <div
                                  hidden={true}
                                >
                                  dummy
                                </div>
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <Row
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="row"
                          >
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="2"
                            >
                              <div
                                className="col-2"
                              >
                                <Label
                                  className="mb-3"
                                  for="materialCategoryParentCategory"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="mb-3"
                                    htmlFor="materialCategoryParentCategory"
                                  >
                                    *Parent Category
                                  </label>
                                </Label>
                              </div>
                            </Col>
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="8"
                            >
                              <div
                                className="col-8"
                              >
                                <FormGroup
                                  hidden={false}
                                  tag="div"
                                >
                                  <div
                                    className="form-group"
                                    hidden={false}
                                  >
                                    <Input
                                      bsSize="sm"
                                      className="waves-effect"
                                      data-testid="materialCategoryParentCategory"
                                      disabled={false}
                                      invalid={false}
                                      name="materialCategoryParentCategory"
                                      onChange={[Function]}
                                      onKeyUp={[Function]}
                                      style={
                                        Object {
                                          "width": "8rem",
                                        }
                                      }
                                      type="select"
                                      value=""
                                    >
                                      <select
                                        aria-invalid={false}
                                        className="waves-effect form-control-sm form-control"
                                        data-testid="materialCategoryParentCategory"
                                        disabled={false}
                                        name="materialCategoryParentCategory"
                                        onChange={[Function]}
                                        onKeyUp={[Function]}
                                        style={
                                          Object {
                                            "width": "8rem",
                                          }
                                        }
                                        value=""
                                      >
                                        <option
                                          value=""
                                        >
                                          Select
                                        </option>
                                        <option
                                          key="0"
                                          value={2}
                                        />
                                      </select>
                                    </Input>
                                    <FormFeedback
                                      tag="div"
                                    >
                                      <div
                                        className="invalid-feedback"
                                      >
                                        Enter a valid material category.
                                      </div>
                                    </FormFeedback>
                                  </div>
                                </FormGroup>
                                <div
                                  hidden={true}
                                >
                                  -
                                </div>
                              </div>
                            </Col>
                          </div>
                        </Row>
                      </div>
                    </CardBody>
                  </div>
                </ContentLoader>
              </CardBody>
            </div>
          </Card>
        </Card>
      </MaterialCategoryDetails>
    </Router>
  </BrowserRouter>
</Provider>
`;

exports[`MaterialCategory -> Components -> <Details> render() Dispatch nothing on input change 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <MaterialCategoryDetails
        changed={true}
        editable={true}
        onSave={[MockFunction]}
      >
        <Card>
          <Card
            className=""
            tag="div"
          >
            <div
              className="card"
            >
              <CardHeader>
                <CardHeader
                  className="font-size-14"
                  tag="div"
                >
                  <div
                    className="font-size-14 card-header"
                  >
                    Material Category Details
                  </div>
                </CardHeader>
              </CardHeader>
              <CardBody>
                <ContentLoader>
                  <div>
                    <CardBody
                      className=""
                      tag="div"
                    >
                      <div
                        className="card-body"
                      >
                        <Row
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="row"
                          >
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="2"
                            >
                              <div
                                className="col-2"
                              >
                                <Label
                                  className="mb-3"
                                  for="materialCategoryName"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="mb-3"
                                    htmlFor="materialCategoryName"
                                  >
                                    *Name
                                  </label>
                                </Label>
                              </div>
                            </Col>
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="8"
                            >
                              <div
                                className="col-8"
                              >
                                <FormGroup
                                  hidden={false}
                                  tag="div"
                                >
                                  <div
                                    className="form-group"
                                    hidden={false}
                                  >
                                    <Input
                                      bsSize="sm"
                                      className="waves-effect"
                                      data-testid="materialCategoryName"
                                      disabled={false}
                                      invalid={false}
                                      name="materialCategoryName"
                                      onChange={[Function]}
                                      onKeyUp={[Function]}
                                      placeholder="Enter"
                                      style={
                                        Object {
                                          "width": "16rem",
                                        }
                                      }
                                      type="text"
                                      value="dummy"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="waves-effect form-control-sm form-control"
                                        data-testid="materialCategoryName"
                                        disabled={false}
                                        name="materialCategoryName"
                                        onChange={[Function]}
                                        onKeyUp={[Function]}
                                        placeholder="Enter"
                                        style={
                                          Object {
                                            "width": "16rem",
                                          }
                                        }
                                        type="text"
                                        value="dummy"
                                      />
                                    </Input>
                                    <FormFeedback
                                      tag="div"
                                    >
                                      <div
                                        className="invalid-feedback"
                                      >
                                        Enter a valid material category name.
                                      </div>
                                    </FormFeedback>
                                  </div>
                                </FormGroup>
                                <div
                                  hidden={true}
                                >
                                  dummy
                                </div>
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <Row
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="row"
                          >
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="2"
                            >
                              <div
                                className="col-2"
                              >
                                <Label
                                  className="mb-3"
                                  for="materialCategoryParentCategory"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="mb-3"
                                    htmlFor="materialCategoryParentCategory"
                                  >
                                    *Parent Category
                                  </label>
                                </Label>
                              </div>
                            </Col>
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="8"
                            >
                              <div
                                className="col-8"
                              >
                                <FormGroup
                                  hidden={false}
                                  tag="div"
                                >
                                  <div
                                    className="form-group"
                                    hidden={false}
                                  >
                                    <Input
                                      bsSize="sm"
                                      className="waves-effect"
                                      data-testid="materialCategoryParentCategory"
                                      disabled={false}
                                      invalid={false}
                                      name="materialCategoryParentCategory"
                                      onChange={[Function]}
                                      onKeyUp={[Function]}
                                      style={
                                        Object {
                                          "width": "8rem",
                                        }
                                      }
                                      type="select"
                                      value=""
                                    >
                                      <select
                                        aria-invalid={false}
                                        className="waves-effect form-control-sm form-control"
                                        data-testid="materialCategoryParentCategory"
                                        disabled={false}
                                        name="materialCategoryParentCategory"
                                        onChange={[Function]}
                                        onKeyUp={[Function]}
                                        style={
                                          Object {
                                            "width": "8rem",
                                          }
                                        }
                                        value=""
                                      >
                                        <option
                                          value=""
                                        >
                                          Select
                                        </option>
                                        <option
                                          key="0"
                                          value={2}
                                        />
                                      </select>
                                    </Input>
                                    <FormFeedback
                                      tag="div"
                                    >
                                      <div
                                        className="invalid-feedback"
                                      >
                                        Enter a valid material category.
                                      </div>
                                    </FormFeedback>
                                  </div>
                                </FormGroup>
                                <div
                                  hidden={true}
                                >
                                  -
                                </div>
                              </div>
                            </Col>
                          </div>
                        </Row>
                      </div>
                    </CardBody>
                  </div>
                </ContentLoader>
              </CardBody>
            </div>
          </Card>
        </Card>
      </MaterialCategoryDetails>
    </Router>
  </BrowserRouter>
</Provider>
`;

exports[`MaterialCategory -> Components -> <Details> render() renders the Details component 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <MaterialCategoryDetails
        changed={false}
        editable={false}
        onSave={[MockFunction]}
      >
        <Card>
          <Card
            className=""
            tag="div"
          >
            <div
              className="card"
            >
              <CardHeader>
                <CardHeader
                  className="font-size-14"
                  tag="div"
                >
                  <div
                    className="font-size-14 card-header"
                  >
                    Material Category Details
                  </div>
                </CardHeader>
              </CardHeader>
              <CardBody>
                <ContentLoader>
                  <div>
                    <CardBody
                      className=""
                      tag="div"
                    >
                      <div
                        className="card-body"
                      >
                        <Row
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="row"
                          >
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="2"
                            >
                              <div
                                className="col-2"
                              >
                                <Label
                                  className="mb-3"
                                  for="materialCategoryName"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="mb-3"
                                    htmlFor="materialCategoryName"
                                  >
                                    *Name
                                  </label>
                                </Label>
                              </div>
                            </Col>
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="8"
                            >
                              <div
                                className="col-8"
                              >
                                <FormGroup
                                  hidden={true}
                                  tag="div"
                                >
                                  <div
                                    className="form-group"
                                    hidden={true}
                                  >
                                    <Input
                                      bsSize="sm"
                                      className="waves-effect"
                                      data-testid="materialCategoryName"
                                      disabled={true}
                                      invalid={false}
                                      name="materialCategoryName"
                                      onChange={[Function]}
                                      onKeyUp={[Function]}
                                      placeholder="Enter"
                                      style={
                                        Object {
                                          "width": "16rem",
                                        }
                                      }
                                      type="text"
                                      value="dummy"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="waves-effect form-control-sm form-control"
                                        data-testid="materialCategoryName"
                                        disabled={true}
                                        name="materialCategoryName"
                                        onChange={[Function]}
                                        onKeyUp={[Function]}
                                        placeholder="Enter"
                                        style={
                                          Object {
                                            "width": "16rem",
                                          }
                                        }
                                        type="text"
                                        value="dummy"
                                      />
                                    </Input>
                                    <FormFeedback
                                      tag="div"
                                    >
                                      <div
                                        className="invalid-feedback"
                                      >
                                        Enter a valid material category name.
                                      </div>
                                    </FormFeedback>
                                  </div>
                                </FormGroup>
                                <div
                                  hidden={false}
                                >
                                  dummy
                                </div>
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <Row
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="row"
                          >
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="2"
                            >
                              <div
                                className="col-2"
                              >
                                <Label
                                  className="mb-3"
                                  for="materialCategoryParentCategory"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="mb-3"
                                    htmlFor="materialCategoryParentCategory"
                                  >
                                    *Parent Category
                                  </label>
                                </Label>
                              </div>
                            </Col>
                            <Col
                              tag="div"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                              xs="8"
                            >
                              <div
                                className="col-8"
                              >
                                <FormGroup
                                  hidden={true}
                                  tag="div"
                                >
                                  <div
                                    className="form-group"
                                    hidden={true}
                                  >
                                    <Input
                                      bsSize="sm"
                                      className="waves-effect"
                                      data-testid="materialCategoryParentCategory"
                                      disabled={true}
                                      invalid={false}
                                      name="materialCategoryParentCategory"
                                      onChange={[Function]}
                                      onKeyUp={[Function]}
                                      style={
                                        Object {
                                          "width": "8rem",
                                        }
                                      }
                                      type="select"
                                      value=""
                                    >
                                      <select
                                        aria-invalid={false}
                                        className="waves-effect form-control-sm form-control"
                                        data-testid="materialCategoryParentCategory"
                                        disabled={true}
                                        name="materialCategoryParentCategory"
                                        onChange={[Function]}
                                        onKeyUp={[Function]}
                                        style={
                                          Object {
                                            "width": "8rem",
                                          }
                                        }
                                        value=""
                                      >
                                        <option
                                          value=""
                                        >
                                          Select
                                        </option>
                                        <option
                                          key="0"
                                          value={2}
                                        />
                                      </select>
                                    </Input>
                                    <FormFeedback
                                      tag="div"
                                    >
                                      <div
                                        className="invalid-feedback"
                                      >
                                        Enter a valid material category.
                                      </div>
                                    </FormFeedback>
                                  </div>
                                </FormGroup>
                                <div
                                  hidden={false}
                                >
                                  -
                                </div>
                              </div>
                            </Col>
                          </div>
                        </Row>
                      </div>
                    </CardBody>
                  </div>
                </ContentLoader>
              </CardBody>
            </div>
          </Card>
        </Card>
      </MaterialCategoryDetails>
    </Router>
  </BrowserRouter>
</Provider>
`;
